manifest/base/apps/regalia/workload/base/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scoreserver-backend
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: scoreserver-backend
  template:
    metadata:
      labels:
        app.kubernetes.io/name: scoreserver-backend
    spec:
      automountServiceAccountToken: false
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app.kubernetes.io/name: scoreserver-backend
                topologyKey: kubernetes.io/hostname
      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: scoreserver
          image: backend
          imagePullPolicy: Always
          args:
            - --contestant.http-addr=0.0.0.0:8080
            - --contestant.route-prefix=/api
            - --admin.http-addr=0.0.0.0:8081
            - --admin.auth-config-file=/etc/ictscore/admin-auth-config.yaml
            - --admin.auth-policy-file=/etc/ictscore/admin-auth-policy.csv
          ports:
            - name: contestant
              containerPort: 8080
            - name: admin
              containerPort: 8081
          volumeMounts:
            - name: config
              mountPath: /etc/ictscore
              readOnly: true
          readinessProbe:
            grpc:
              port: 8081
          livenessProbe:
            grpc:
              port: 8081
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 500m
              memory: 256Mi
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL
      volumes:
        - name: config
          configMap:
            name: scoreserver-backend-config
---
apiVersion: v1
kind: Service
metadata:
  name: scoreserver-backend
spec:
  selector:
    app.kubernetes.io/name: scoreserver-backend
  ports:
    - name: contestant
      port: 8080
      targetPort: contestant
      appProtocol: kubernetes.io/h2c
    - name: admin
      port: 8081
      targetPort: admin
      appProtocol: kubernetes.io/h2c
